--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,19 +14,19 @@ jobs:
     - name: build
       run: make -j3
 
-  build-windows:
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v1
-      with:
-        submodules: recursive
-    - uses: numworks/setup-msys2@v1
-    - name: update pacman
-      run: msys2do pacman -Syu --noconfirm
-    - name: install monero dependencies
-      run: msys2do pacman -S --noconfirm mingw-w64-x86_64-toolchain make mingw-w64-x86_64-cmake mingw-w64-x86_64-boost mingw-w64-x86_64-openssl mingw-w64-x86_64-zeromq mingw-w64-x86_64-libsodium mingw-w64-x86_64-hidapi mingw-w64-x86_64-protobuf-c mingw-w64-x86_64-libusb git
-    - name: build
-      run: msys2do make release-static-win64 -j2
+#  build-windows:
+#    runs-on: windows-latest
+#    steps:
+#    - uses: actions/checkout@v1
+#      with:
+#        submodules: recursive
+#    - uses: numworks/setup-msys2@v1
+#    - name: update pacman
+#      run: msys2do pacman -Syu --noconfirm
+#    - name: install monero dependencies
+#      run: msys2do pacman -S --noconfirm mingw-w64-x86_64-toolchain make mingw-w64-x86_64-cmake mingw-w64-x86_64-boost mingw-w64-x86_64-openssl mingw-w64-x86_64-zeromq mingw-w64-x86_64-libsodium mingw-w64-x86_64-hidapi mingw-w64-x86_64-protobuf-c mingw-w64-x86_64-libusb git
+#    - name: build
+#      run: msys2do make release-static-win64 -j2
 
   build-ubuntu:
     runs-on: ubuntu-latest
