--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,11 @@ jobs:
     - name: install monero dependencies
       run: sudo apt -y install build-essential cmake libboost-all-dev miniupnpc libunbound-dev graphviz doxygen libunwind8-dev pkg-config libssl-dev libzmq3-dev libsodium-dev libhidapi-dev libnorm-dev libusb-1.0-0-dev libpgm-dev libprotobuf-dev protobuf-compiler
     - name: build
-      run: make -j3
+      run: make -j3 USE_SINGLE_BUILDDIR=1
+    - uses: actions/upload-artifact@v2
+      with:
+        name: bittubed
+        path: build/release/bin/bittubed
 
 #  libwallet-ubuntu:
 #    runs-on: ubuntu-latest
